<resources>
    <string name="app_name" translatable="false">Electic Meter Tariff Time Alert</string>

    <string name="hello_world">Make you choice:</string>
    <string name="action_settings">Settings</string>
    <string name="enableBootSLabel">Enable boot</string>
    <string name="enableAlarmSLabel">Enable alarm now</string>
    <string name="enableWorkWeekSLabel">Disable alert during work week</string>
    <string name="please_wait">In progress. Please, wait…</string>

    <string name="tariff_low_price">Low price time starting now...</string>
    <string name="tariff_medium_price">Medium price time starting now...</string>
    <string name="tariff_high_price">High price time starting now...</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="instruction_text">\n</string>
    <string name="every_hourSLabel">Alert avery hour</string>
</resources>
