<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentStart="true">


        <TabHost
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tabHost"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView" />
                        <Switch
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enableBootSLabel"
                            android:id="@+id/switchEnableBoot"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            />
                        <Switch
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enableAlarmSLabel"
                            android:id="@+id/switchEnableAlarm"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                             />
                        <Switch
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enableWorkWeekSLabel"
                            android:id="@+id/switchEnableWorkWeek"
                            android:layout_below="@+id/textView"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            />
                        <Switch
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/switchEnableEveryHour"
                            android:text="@string/every_hourSLabel"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="Large Text"
                            android:id="@+id/InfoTextView"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentStart="true"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"></LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </LinearLayout>



</RelativeLayout>
